# twitch-game

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.nix  default.nix  endpoints.md  logical.nix  physical.nix  pinned-nixpkgs.nix  shell.nix  twitch-game.cabal
src/: Bot.hs  Errors.hs  Main.hs  Types.hs
src/API/: CommandParser.hs  Endpoints.hs  Errors.hs  Lib.hs  Types.hs
src/Game/: Lib.hs
src/JSON/: Internals.hs
src/Twitch/: Lib.hs
src/Twitch/Internal/: Client.hs  Constants.hs  Parser.hs  Types.hs
