cabal-version:       2.0
name:                twitch-game
version:             0.1.0.0
synopsis:            Twitch IRC game
homepage:            https://github.com/monadplus/twitch-game
bug-reports:         https://github.com/monadplus/twitch-game/issues
license:             BSD3
license-file:        LICENSE
author:              monadplus
maintainer:          arnauabella@gmail.com
copyright:           Arnau Abella Gassl 2020-2022
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-With: GHC == 8.6.5

executable twitch-game
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options: -Wall
               -O3
               -threaded
               -rtsopts
               -with-rtsopts=-N
  build-depends:       base ^>=4.12.0.0
                     , aeson
                     , servant
                     , servant-server
                     , text
                     , warp
                     , wai
                     , wai-extra
  hs-source-dirs:      src
  default-language:    Haskell2010
